# MarathonTraining

./: .dockerignore  .env.example  .replit  DOCKER_DEPLOYMENT.md  Dockerfile  PROJECT_REQUIREMENTS.md  Race_Predictor_Explanation.md  SOLUTION_DESIGN.md  TECH_STACK.md  docker-compose.yml  main.py  marathon_dashboard.log.1  marathon_dashboard.log.2  marathon_dashboard.log.3  pyproject.toml  requirements-minimal.txt  requirements-optimized.txt  requirements-ultra-minimal.txt  requirements.txt  test_gemini_api.py
app/: __init__.py  achievement_system.py  ai_race_advisor.py  community_analytics.py  config.py  data_processor.py  industry_standard_race_predictor.py  injury_predictor.py  mail_notifier.py  models.py  periodized_race_predictor.py  processing_workflows.py  race_optimizer.py  race_predictor_simple.py  routes.py  security.py  senior_athlete_analytics.py  senior_athlete_analytics_simple.py  simple_routes.py  strava_client.py  training_heatmap.py  training_heatmap_simple.py  training_load_calculator.py  web_routes.py
attached_assets/: Pasted--workspace-pip-freeze-altair-5-5-0-aniso8601-10-0-1-annotated-types-0-7-0-anyio-4-9-0-APS-1749554376719_1749554376726.txt  Pasted-2025-06-07-07-50-28-608-INFO-app-strava-client-athlete-id-N-A-Retrieved-athlete-info-for-ID-242-1749282689854_1749282689858.txt  Pasted-2025-06-07-07-54-06-250-ERROR-app-athlete-id-N-A-Exception-on-analytics-GET-Traceback-most--1749283047178_1749283047182.txt  Pasted-2025-06-07-08-09-45-487-INFO-app-simple-routes-athlete-id-N-A-Fetching-dashboard-data-for-athlet-1749284001769_1749284001774.txt  (+5 more)
(+31 files in other folders)
